assets/css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Bpmf+Iansui&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap');


:root{
--secondary-font: "Bpmf Iansui", cursive;
--primary-font: "Playpen Sans Thai", cursive;
--primary-colour: rgb(92, 149, 44);
--secondary-colour: #8B6D5C;
--theme-colour: rgb(244, 246, 231);
--feature-colour: rgb(195, 223, 238);
}   

body{
    height: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}


.container {
    background-color: rgb(255, 255, 255);
    width: 80%;
    position: relative;
    border-radius: 10px;
    margin: 30px auto;
    padding: 10px 0px;

}

.container h1, h1 {
    color: var(--primary-colour) !important;
    text-transform: capitalize; 
    font-family: var(--primary-font);
}

.container h2{
    color: rgb(87, 47, 16);
    font-family: var(--secondary-font);
}
.secondary-font{
    font-family: var(--secondary-font);
}

.container h3, .container h4, h3{
   text-transform: capitalize; 
   color: var(--secondary-colour) !important;
   font-family: var(--secondary-font);
}

.container-reviews{
    background-color: var(--theme-colour);
    border-radius: 10px;
}

.row{
    padding: 0;
}

h4.h4-green{
    color: var(--primary-colour) !important;
}

h5 {
    color: var(--secondary-colour);
}

h6{
    color: rgb(199, 245, 245);
}



.enquire-section a{
    color: rgb(4, 84, 12);
    text-decoration: none;
    font-family: var(--secondary-font)
}


/*---------------------------------------------------------Footer*/
footer h2{
    color: pink;
}
footer{
    margin-top: auto;
    width: 100%;

    background: linear-gradient(to bottom, 
        yellow 10%,
        orange 30%,
        var(--feature-colour) 50%, 
        var(--primary-colour) 100%, 
        var(--secondary-colour)) 80%;

    color: var(--primary-colour);
    font-family: var(--secondary-font);
    bottom: 0;
    position: relative;

}

#footer-span{
    font-size: 10px;
    color: var(--primary-colour);
}

.footer-content {
    position: relative;
    z-index: 2;
}

.footer-overlay {
    position: absolute;
    bottom: 35vw;
    right:  1vw;
    width: 270px;
    opacity: 1.5;
    pointer-events: none;
}

#footer-address {
        color: rgb(32, 4, 104)!important;
        width: 100%;
        margin: 0 auto;     /* keeps it centered */
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 0px !important;
        box-sizing: border-box;

    }
    
h5#follow-header{
    font-size: 23px;
    color: rgb(32, 4, 104)!important;
}

.footer-feature-follow, .footer-feature-useful{
    background-color: rgba(255, 255, 255, 0.644);
    border: white solid 3px;
    border-radius: 38px;
    padding: 8px 0;
}

.h4-useful-links{
    color: rgb(32, 4, 104)!important;
    font-size: 23px;
}

#footer-resource-links a{
    text-decoration: none;
    word-spacing: 2px;
    color: rgb(32, 4, 104);
    font-size: 23px !important;
    
}

#span-useful, #span-loction{
    color: var(--secondary-colour);
    
    }


i.fa-brands{
    font-size: 32px  !important;
    color: rgb(242, 253, 255);
}

.contact-numbers{
    color: var(--primary-colour) !important;
}

a[href^="tel"] {
    color: var(--primary-colour) !important;
    text-decoration: none;
}



footer .row {
    margin-right: 0;
    margin-left: 0;
}

.address-box{
    margin-top: 10px;
    background-color: rgba(255, 255, 255, 0.37);
    display: inline-block;
    max-width: 300px;
    padding: 5px;
    border-radius: 50%;
  

}



/*-----------------------------------------*/

li{
    list-style: none;
}

.send-list{
    margin-bottom: 10px;
    width: 100%;
    color: var(--secondary-colour);
}

.content-info-links a{
    width: 70%;
    border-radius: 5px;
    padding: 3px; 
    text-decoration: none;
    color: var(--secondary-colour); 
    font-size: 20px;
    text-decoration:underline;
}

.funding-list{
    color: var(--secondary-colour);
}

li.info-links{
    color: white;
    background-color: var(--secondary-colour);
    width: 100%;
    border-radius: 6px;
    padding: 6px;  
    font-size: 17px; 
    
}

li.info-links a{
    list-style: none;          /* removes bullet */
    text-decoration: none;     /* removes underline */
    color: inherit;    
}



/*-----------------------------------------NavBar*/
.navbar {
    background-color: var(--theme-colour);
    font-family: var(--secondary-font);
}

a.nav-link {
    color: var(--primary-colour);
    font-weight: bold;
    font-size: 16px;
}
.nav-link.active {
    color: rgb(87, 47, 16) !important;
}
.nav-link:hover {
    color: #bb947e !important;
}


#form-contact label{
    margin-bottom: 2px;
    margin-top: 20px;
}

#cv-span {
    font-style: italic;
    font-size: smaller;
    margin-left: 5px;
}


.content-section {
    display: none;
}

.content-section.active {
    display: block;
    font-family: var(--secondary-font);
}
  
#reviewCarousel .carousel-item {
    height: auto !important;
   
}

.carousel-inner {
    border-radius: 30px;
    height: 100%;
}

.carousel-item{
    height: 200px;
    overflow: hidden;
}

.carousel-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    object-position: center;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    width: 3rem;
    height: 3rem;
    filter: invert(2);
}

iframe {
    width: 100%;
    max-width: 100%;
    display: block;
}

#homepage-slogan{
    color: var(--secondary-colour);
}

.homepage-layout{
    display:flex;
    flex-direction:column;
}

/* mobile default */
.hero-section{
    order:1;
}

.enquire-section{
    order:2;
}

.reviews-section{
    order:3;
}

/* ----------------------------------------------Bullet Points*/
.bear-list{
    list-style:none;
    padding-left:0;
}

.bear-list li{
    position:relative;
    padding-left:35px;
    margin-bottom:12px;
}

.bear-list li::before{
    content:"";
    position:absolute;
    left:0;
    top:2px;
    width:22px;
    height:22px;
    background:url("../images/svg/teddy-bear.svg") no-repeat center;
    background-size:contain;
}







@media (max-width: 768px) {
    .carousel-item img {
        height: 220px !important;
    }
    h5#footer-follow{
        color:rgb(32, 4, 104);
    }
}


/*--------------------------------------Desktop restore original order */
@media (min-width:768px){

    .hero-section{
        order:2;
    }

    .enquire-section{
        order:3;
    }

    .reviews-section{
        order:1;
    }

    #footer-resource-links a{
        text-transform: none;      
        font-size: 26px !important;
        color: white;
    }

    .carousel-item {
        height: 300px;
        overflow: hidden;
    }

    .carousel-index{
        height: 300px;
        overflow: hidden;
    }
    .index-h5{
        font-size: 28px !important;
    }

    .index-written-content p{
        font-size: 18px !important;
        
    }

   
}




@media (max-width: 768px) {
    .navbar-nav {
        padding: 10px 0 10px 20px;
    }

   
}

/*------------------------------------------Footer Overlay Media Queries*/
@media (min-width: 375px) {
    .footer-overlay {
        bottom: 117px;
        right: 10px;
        width: 290px;
    }
}

@media (min-width: 425px) {
    .footer-overlay {
        bottom: 117px;
        right: 10px;
        width: 310px;
    }
}

@media (min-width: 425px) {
    .footer-overlay {
        bottom: 117px;
        right: 10px;
        width: 330px;
    }
}

@media (min-width: 474px) {
    .footer-overlay {
        bottom: 80px;
        right: 10px;
        width: 350px;
    }
}

@media (min-width: 768px) {
    .footer-overlay {
        bottom: 15px;
        right: 5px;
        width: 400px;
    }
}
@media (min-width: 992px) {
    .footer-overlay {
        bottom: 5px;
        right: 25px;
        width: 300px;
    }

    .carousel-item {
        height: 400px;
        overflow: hidden;
    }

    .carousel-index{
        height: 400px;
        overflow: hidden;
    }

    .index-h5{
        font-size: 42px !important;
    }

    .index-written-content p{
        font-size: 26px !important;
        
    }
}

/*-----------------------------------------Nav Links*/

@media (min-width: 880px){
    a.nav-link {
        font-size: 18px;
        margin: 0px 2px;
       
}
}

@media (min-width: 1000px){
    a.nav-link {
        font-size: 20px;
        margin: 0px 5px;
       
}
}

@media (min-width: 1140px){
    a.nav-link {
        font-size: 26px;
        margin: 0px 3px;
      
}
}

@media (min-width: 2000px){
    a.nav-link {
        font-size: 30px;
        margin: 0px 7px;
        
}
}

